# ITServiceHealth

./: .env.example  .gitignore  .pre-commit-config.yaml  CASE-STUDY.md  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  PRODUCTION-ROADMAP.md  README.md  com.box.it-health-dashboard.plist  com.company.it-health-dashboard.plist
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: auth.py  backup.py  config.py  database.py  logging_config.py  main.py  models.py  postmortems.py  reports.py  retention.py  router_admin.py  router_reports.py  router_services.py  router_slack.py  router_summary.py  router_timeline.py  router_webhooks.py  seed.py  sla.py
backend/app/alerting/: burn_rate.py  engine.py  routing.py  slack.py  templates.py
backend/app/dependencies/: graph.py
backend/app/observability/: __init__.py  heartbeat.py  metrics.py  sentry_setup.py
backend/app/poller/: active_incidents_poller.py  change_detector.py  current_status_poller.py  google_poller.py  normalizer.py  product_feed_poller.py  resilience.py  ringcentral_poller.py  salesforce_poller.py  scheduler.py  service_array_poller.py  slack_poller.py  statuspage_poller.py  trust_incidents_poller.py  zendesk_poller.py
backend/config/: dependencies.yaml  services.yaml
backend/migrations/: 0001_initial_schema.sql  0002_maintenance_unique_index.sql  0003_incident_reports.sql  0004_status_event_audit.sql  0005_poller_health.sql  0006_alert_quality.sql
backend/tests/: conftest.py  test_admin_api.py  test_app_lifespan.py  test_backup.py  test_burn_rate.py  test_change_detector.py  test_e2e_pipeline.py  test_graph.py  test_logging_config.py  test_normalizer.py  test_observability.py  test_poller_integration.py  test_postmortems.py  test_resilience.py  test_retention.py  test_routing.py  test_seed.py  test_seeder.py  test_services_api.py  test_sla.py  test_slack_ack.py  test_slack_alerting.py  test_slack_slash.py  test_slo_api.py  test_templates.py  test_webhook_receiver.py
deploy/: Caddyfile.example  com.box.it-health-dashboard-litestream.plist.example  com.company.it-health-dashboard-litestream.plist.example  litestream.yml.example
docs/: PORTFOLIO-DISPOSITION.md
docs/architecture-diagram/: build_diagram.py
docs/case-study/: pulse.html
docs/design-brief/: README.md  brief.md  component-inventory.md  design-system-export.md  how-to-capture.md
docs/executive-view-redesign/: CLAUDE.md  IMPLEMENTATION-ROADMAP.md
docs/executive-view-redesign/mockups/: build_mockup.py
docs/executive-view-redesign/screenshots/: README.md  capture.py
docs/pitch-deck/: build_deck.py  pulse-hdi.pptx
docs/postmortems/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: capture-screenshots.mjs
frontend/src/: App.jsx
frontend/src/components/: CategorySummary.jsx  DependencyGraph.jsx  ErrorBanner.jsx  IncidentSection.jsx  LastUpdated.jsx  MaintenanceBanner.jsx  ReloadPrompt.jsx  ServiceCard.jsx  ServiceDetail.jsx  ServiceGrid.jsx  ServiceTile.jsx  ShortcutsOverlay.jsx  SituationBanner.jsx  SlaChart.jsx  StatusBadge.jsx  StatusBanner.jsx  StatusBoard.jsx  StatusIndicator.jsx  Timeline.jsx  UptimeBar.jsx  ViewToggle.jsx
frontend/src/contexts/: ViewContext.jsx  use-view.js  view-context.js
frontend/src/hooks/: use-executive-data.js  (+2 more)
scripts/: keychain-secrets.sh  run-with-keychain.sh  seed_demo_data.py
(+14 files in other folders)
